Complete translateion to Thai language

--- a/locale/validation.yml
+++ b/locale/validation.yml
@@ -1,82 +1,82 @@
 validation:
-  accepted: "The :attribute must be accepted."
-  active_url: "The :attribute is not a valid URL."
-  after: "The :attribute must be a date after :date."
-  after_or_equal: "The :attribute must be a date after or equal to :date."
-  alpha: "The :attribute may only contain letters."
-  alpha_dash: "The :attribute may only contain letters, numbers, and dashes."
-  alpha_num: "The :attribute may only contain letters and numbers."
-  array: "The :attribute must be an array."
-  before: "The :attribute must be a date before :date."
-  before_or_equal: "The :attribute must be a date before or equal to :date."
+  accepted: "ต้องยอมรับ:attribute"
+  active_url: "attributeไม่ใช่ URL ที่ถูกต้อง"
+  after: ":attributeต้องเป็นวันที่หลังจาก :date"
+  after_or_equal: ":attributeต้องเป็นวันที่หลังจากหรือเท่ากับ :date"
+  alpha: ":attributeต้องประกอบด้วยตัวอักษรเท่านั้น"
+  alpha_dash: ":attributeต้องประกอบด้วยตัวอักษรตัวเลขและเครื่องหมายขีดกลางเท่านั้น"
+  alpha_num: ":attributeต้องประกอบด้วยตัวอักษรและตัวเลขเท่านั้น"
+  array: ":attributeต้องเป็นอาร์เรย์"
+  before: ":attributeต้องเป็นวันที่ก่อน :date"
+  before_or_equal: ":attributeต้องเป็นวันที่ก่อนหรือเท่ากับ :date"
   between:
-    numeric: "The :attribute must be between :min and :max."
-    file: "The :attribute must be between :min and :max kilobytes."
-    string: "The :attribute must be between :min and :max characters."
-    array: "The :attribute must have between :min and :max items."
-  boolean: "The :attribute field must be true or false."
-  confirmed: "The :attribute confirmation does not match."
-  date: "The :attribute is not a valid date."
-  date_format: "The :attribute does not match the format :other."
-  different: "The :attribute and :other must be different."
-  digits: "The :attribute must be :digits digits."
-  digits_between: "The :attribute must be between :min and :max digits."
-  dimensions: "The :attribute has invalid image dimensions."
-  distinct: "The :attribute field has a duplicate value."
-  email: "The :attribute must be a valid email address."
-  exists: "The selected :attribute is invalid."
-  file: "The :attribute must be a file."
-  filled: "The :attribute field must have a value."
-  image: "The :attribute must be an image."
-  in: "The selected :attribute is invalid."
-  in_array: "The :attribute field does not exist in :other."
-  integer: "The :attribute must be an integer."
-  ip: "The :attribute must be a valid IP address."
-  ipv4: "The :attribute must be a valid IPv4 address."
-  ipv6: "The :attribute must be a valid IPv6 address."
-  json: "The :attribute must be a valid JSON string."
+    numeric: ":attributeต้องอยู่ระหว่าง :min และ :max"
+    file: ":attributeต้องอยู่ระหว่าง :min และ :max กิโลไบต์"
+    string: ":attributeต้องอยู่ระหว่าง :min และ :max อักษร"
+    array: ":attributeต้องอยู่ระหว่าง :min และ :max ไอเทม"
+  boolean: ":attributeต้องเป็น ถูก หรือ ผิด"
+  confirmed: ":attributeไม่ตรงกัน"
+  date: ":attributeไม่ใช่วันที่ที่ถูกต้อง"
+  date_format: "attributeไม่ตรงกับ:other"
+  different: "attributeและ:otherต้องแตกต่างกัน"
+  digits: ":attributeต้องเป็น:digits digits"
+  digits_between: ":attributeตัวเลขต้องอยู่ระหว่าง :min และ :max"
+  dimensions: ":attributeขนาดภาพไม่ถูกต้อง"
+  distinct: ":attributeมีค่าที่ซ้ำกัน"
+  email: ":attributeต้องเป็นที่อยู่อีเมลที่ถูกต้อง"
+  exists: "ตัวเลือก:attributeไม่ถูกต้อง"
+  file: ":attributeต้องเป็นไฟล์"
+  filled: ":attributeต้องมีข้อมูล"
+  image: ":attributeต้องเป็นรูปภาพ"
+  in: "ตัวเลือก attributeไม่ถูกต้อง"
+  in_array: "attributeไม่มีอยู่ใน :other"
+  integer: ":attributeต้องเป็นตัวเลข"
+  ip: ":attributeต้องเป็น IP address ที่ถูกต้อง"
+  ipv4: ":attributeต้องเป็น IPv4 address ที่ถูกต้อง"
+  ipv6: ":attributeต้องเป็น IPv6 address ที่ถูกต้อง"
+  json: ":attributeต้องเป็น JSON ที่ถูกต้อง"
   max:
-    numeric: "The :attribute may not be greater than :max."
-    file: "The :attribute may not be greater than :max kilobytes."
-    string: "The :attribute may not be greater than :max characters."
-    array: "The :attribute may not have more than :max items."
-  mimes: "The :attribute must be a file of type: :values."
-  mimetypes: "The :attribute must be a file of type: :values."
+    numeric: ":attributeต้องไม่เกิน :max"
+    file: ":attributeต้องไม่เกิน :max กิโลไบต์"
+    string: ":attributeต้องไม่เกิน :max อักษร"
+    array: ":attributeต้องไม่เกิน :max ไอเทม"
+  mimes: ":attributeประเภทของไฟล์ต้องเป็น :values"
+  mimetypes: ":attributeประเภทของไฟล์ต้องเป็น :values"
   min:
-    numeric: "The :attribute must be at least :min."
-    file: "The :attribute must be at least :min kilobytes."
-    string: "The :attribute must be at least :min characters."
-    array: "The :attribute must have at least :min items."
-  not_in: "The selected :attribute is invalid."
-  numeric: "The :attribute must be a number."
-  present: "The :attribute field must be present."
-  regex: "The :attribute format is invalid."
-  required: "The :attribute field is required."
-  required_if: "The :attribute field is required when :other is :value."
-  required_unless: "The :attribute field is required unless :other is in :values."
-  required_with: "The :attribute field is required when :values is present."
-  required_with_all: "The :attribute field is required when :values is present."
-  required_without: "The :attribute field is required when :values is not present."
-  required_without_all: "The :attribute field is required when none of :values are present."
-  same: "The :attribute and :other must match."
+    numeric: ":attributeต้องมีอย่างน้อย :min"
+    file: ":attributeต้องมีอย่างน้อย :min กิโลไบต์"
+    string: ":attributeต้องมีอย่างน้อย :min อักษร"
+    array: ":attributeต้องมีอย่างน้อย :min ไอเทม"
+  not_in: "ตัวเลือก:attributeไม่ถูกต้อง"
+  numeric: ":attributeต้องเป็นตัวเลข"
+  present: ":attributeต้องเป็นปัจจุบัน"
+  regex: "รูปแบบ:attributeไม่ถูกต้อง"
+  required: "จำเป็นต้องมี:attribute"
+  required_if: "จำเป็นต้องมี:attributeเมื่อ:other คือ :value"
+  required_unless: "จำเป็นต้องมี:attributeเว้นแต่:other อยู่ใน :values"
+  required_with: "จำเป็นต้องมี:attributeเมื่อ:values เป็นปัจจุบัน"
+  required_with_all: "attributeจำเป็นต้องมีเมื่อ :values เป็นปัจจุบัน"
+  required_without: "attributeจำเป็นต้องมีเมื่อ :values ไม่เป็นปัจจุบัน"
+  required_without_all: "จำเป็นต้องมีเมื่อไม่มี :values เป็นปัจจุบัน"
+  same: "attributeและ :other ต้องตรงกัน"
   size:
-    numeric: "The :attribute must be :size."
-    file: "The :attribute must be :size kilobytes."
-    string: "The :attribute must be :size characters."
-    array: "The :attribute must contain :size items."
-  string: "The :attribute must be a string."
-  timezone: "The :attribute must be a valid zone."
-  unique: "The :attribute has already been taken."
-  uploaded: "The :attribute failed to upload."
-  url: "The :attribute format is invalid."
+    numeric: ":attributeต้องเป็น :size"
+    file: ":attributeต้องเป็น :size กิโลไบต์"
+    string: ":attributeต้องเป็น :size อักษร"
+    array: ":attributeต้องมี :size ไอเทม"
+  string: ":attributeตั้องเป็นอักษร"
+  timezone: ":attributeต้องเป็นเขตที่ถูกต้อง"
+  unique: ":attributeถูกใช้งานไปแล้ว"
+  uploaded: ":attributeไม่สามารถอัปโหลด"
+  url: ":attributeมีรูปแบบไม่ถูกต้อง"
 
   attributes:
-    username: username
-    password: password
-    email: email
-    title: title
-    content: content
-    name_singular: singular name
-    name_plural: plural name
-    tag_count_primary: number of primary tags
-    tag_count_secondary: number of secondary tags
+    username: ชื่อผู้ใช้
+    password: รหัสผ่าน
+    email: อีเมล
+    title: หัวข้อ
+    content: เนื้อหา
+    name_singular: ชื่อเอกพจน์
+    name_plural: ชื่อพหูพจน์
+    tag_count_primary: จำนวนแท็กหลัก
+    tag_count_secondary: จำนวนแท็กรอง
