--- a/locale/flarum-akismet.yml
+++ b/locale/flarum-akismet.yml
@@ -10,13 +10,13 @@ flarum-akismet:
     # These translations are used in the Akismet Settings modal dialog.
     akismet_settings:
       api_key_label: API Key
-      title: Akismet Settings
+      title: ตั้งค่า Akismet
 
   # Translations in this namespace are used by the forum user interface.
   forum:
 
     # These translations are used by the frame displayed around flagged posts.
     post:
-      akismet_flagged_text: Akismet flagged as spam
-      not_spam_button: Not Spam
+      akismet_flagged_text: ติดธงว่าเป็นสแปมโดย Akismet
+      not_spam_button: ไม่ใช่สแปม
 
