--- a/locale/flarum-auth-github.yml
+++ b/locale/flarum-auth-github.yml
@@ -11,11 +11,11 @@ flarum-auth-github:
     github_settings:
       client_id_label: Client ID
       client_secret_label: Client Secret
-      title: GitHub Settings
+      title: ตั้งค่า GitHub
 
   # Translations in this namespace are used by the forum user interface.
   forum:
 
     # These translations are used in the Log In modal dialog.
     log_in:
-      with_github_button: Log In with GitHub
+      with_github_button: เข้าสู่ระบบด้วย GitHub
