--- a/locale/flarum-mentions.yml
+++ b/locale/flarum-mentions.yml
@@ -9,28 +9,28 @@ flarum-mentions:
 
     # These translations are used by the composer (reply autocompletion function).
     composer:
-      reply_to_post_text: "Reply to #{number}"
+      reply_to_post_text: "ตอบกลับไปยัง #{number}"
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
       others_text: => core.ref.some_others
-      post_mentioned_text: "{username} replied to your post"  # Can be pluralized to agree with the number of users!
-      user_mentioned_text: "{username} mentioned you"
+      post_mentioned_text: "{username} ตอบกลับโพสท์ของคุณ"  # Can be pluralized to agree with the number of users!
+      user_mentioned_text: "{username} กล่าวถึงคุณ"
 
     # These translations are displayed beneath individual posts.
     post:
-      mentioned_by_self_text: "{users} replied to this."  # Can be pluralized to agree with the number of users!
-      mentioned_by_text: "{users} replied to this."       # Can be pluralized to agree with the number of users!
+      mentioned_by_self_text: "{users} ตอบกลับโพสท์นี้"  # Can be pluralized to agree with the number of users!
+      mentioned_by_text: "{users} ตอบกลับโพสท์นี้"       # Can be pluralized to agree with the number of users!
       others_text: => core.ref.some_others
-      quote_button: Quote
+      quote_button: อ้างอิง
       reply_link: => core.ref.reply
       you_text: => core.ref.you
 
     # These translations are used in the Settings page.
     settings:
-      notify_post_mentioned_label: Someone replies to one of my posts
-      notify_user_mentioned_label: Someone mentions me in a post
+      notify_post_mentioned_label: เมื่อมีคนตอบกลับโพสท์ของฉัน
+      notify_user_mentioned_label: เมื่อมีคนกล่าวถึงฉัน
 
     # These translations are used in the user profile page and profile popup.
     user:
-      mentions_link: Mentions
+      mentions_link: การกล่าวถึง
