--- a/locale/flarum-subscriptions.yml
+++ b/locale/flarum-subscriptions.yml
@@ -15,8 +15,8 @@ flarum-subscriptions:
     # These translations are used by the discussion control buttons.
     discussion_controls:
       follow_button: => flarum-subscriptions.ref.follow
-      unfollow_button: Unfollow
-      unignore_button: Unignore
+      unfollow_button: เลิกติดตาม
+      unignore_button: เลิกเพิกเฉย
 
     # These translations are used on the index page, peripheral to the discussion list.
     index:
@@ -24,24 +24,24 @@ flarum-subscriptions:
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
-      new_post_text: "{username} posted"
+      new_post_text: "{username} โพสท์"
 
     # These translations are used in the Settings page.
     settings:
-      follow_after_reply_label: Automatically follow discussions that I reply to
-      notify_new_post_label: Someone posts in a discussion I'm following
+      follow_after_reply_label: ติดตามกระทู้ที่ฉันตอบกลับอัตโนมัติ
+      notify_new_post_label: เมื่อมีคนตอบกระทู้ที่ฉันติดตาม
 
     # These translations are used in the subscription menu displayed to the right of the post stream.
     sub_controls:
       follow_button: => flarum-subscriptions.ref.follow
       following_button: => flarum-subscriptions.ref.following
-      following_text: Be notified of all replies.
+      following_text: รับแจ้งเตือบจากการตอบกลับทั้งหมด
       ignoring_button: => flarum-subscriptions.ref.ignoring
-      ignoring_text: Never be notified. Hide from the discussion list.
-      not_following_button: Not Following
-      not_following_text: "Be notified only when @mentioned."
-      notify_alert_tooltip: Get a forum notification when there are new posts
-      notify_email_tooltip: Get an email when there are new posts
+      ignoring_text: ไม่รับการแจ้งเตือนและซ่อนจากรายการกระทู้
+      not_following_button: ไม่ติดตาม
+      not_following_text: "แจ้งเตือนเฉพาะตอนที่มีคนกล่าวถึง"
+      notify_alert_tooltip: รับการแจ้งเตือนจากฟอรัมเมื่อมีโพสต์ใหม่
+      notify_email_tooltip: รับอีเมลเมื่อมีโพสต์ใหม่
 
   ##
   # REUSED TRANSLATIONS - These keys should not be used directly in code!
@@ -49,6 +49,6 @@ flarum-subscriptions:
 
   # Translations in this namespace are referenced by two or more unique keys.
   ref:
-    follow: Follow
-    following: Following
-    ignoring: Ignoring
+    follow: ติดตาม
+    following: กำลังติดตาม
+    ignoring: ไม่สนใจ
