--- a/locale/flarum-tags.yml
+++ b/locale/flarum-tags.yml
@@ -13,82 +13,82 @@ flarum-tags:
 
     # These translations are used in the Edit Tag modal dialog.
     edit_tag:
-      color_label: Color
-      delete_tag_button: Delete Tag
-      delete_tag_confirmation: "Are you sure you want to delete this tag? The tag's discussions will NOT be deleted."
-      description_label: Description
-      hide_label: Hide from All Discussions
+      color_label: สี
+      delete_tag_button: ลบแท็ก
+      delete_tag_confirmation: "คุณแน่ใจหรือไม่ว่าต้องการลบแท็กนี้ ? กระทู้ภายในแท็กนี้จะไม่ถูกลบตามไปด้วย"
+      description_label: คำอธิบาย
+      hide_label: ซ่อนจากรายการกระทู้
       name_label: => flarum-tags.ref.name
       name_placeholder: => flarum-tags.ref.name
-      slug_label: Slug
+      slug_label: ลิงค์
       submit_button: => core.ref.save_changes
       title: => flarum-tags.ref.create_tag
 
     # These translations are used in the navigation bar.
     nav:
       tags_button: => flarum-tags.ref.tags
-      tags_text: Manage the list of tags available to organise discussions with.
+      tags_text: จัดการรายชื่อแท็กที่พร้อมใช้งานเพื่อจัดมวดหมู่ของกระทู้
 
     # These translations are used in the Permissions page of the admin interface.
     permissions:
-      allow_edit_tags_label: Allow tag editing
-      restrict_by_tag_heading: Restrict by Tag
-      tag_discussions_label: Tag discussions
+      allow_edit_tags_label: อนุญาตการแก้ไขแท็ก
+      restrict_by_tag_heading: แบ่งตามแท็ก
+      tag_discussions_label: ติดแท็กกระทู้
 
     # These translations are used in the Tag Settings modal dialog.
     tag_settings:
-      range_separator_text: " to "
-      required_primary_heading: Required Number of Primary Tags
-      required_primary_text: Enter the minimum and maximum number of primary tags that may be applied to a discussion.
-      required_secondary_heading: Required Number of Secondary Tags
-      required_secondary_text: Enter the minimum and maximum number of secondary tags that may be applied to a discussion.
-      title: Tag Settings
+      range_separator_text: " ถึง  "
+      required_primary_heading: จำนวนแท็กหลักที่จำเป็น
+      required_primary_text: ป้อนจำนวนแท็กหลักขั้นต่ำและสูงสุดที่อาจใช้ในการตั้งกระทู้
+      required_secondary_heading: จำนวนแท็กรองที่จำเป็น
+      required_secondary_text: ป้อนจำนวนแท็กรองขั้นต่ำและสูงสุดที่อาจใช้ในการตั้งกระทู้
+      title: ตั้งค่าแท็ก
 
     # These translations are used in the Tags page.
     tags:
-      about_tags_text: "Tags are used to categorize discussions. Primary tags are like traditional forum categories: they can be arranged in a two-level hierarchy. Secondary tags do not have hierarchy or order, and are useful for micro-categorization."
+      about_tags_text: "ใช้แท็กเพื่อจัดหมวดหมู่ของกระทู้ แท็กหลักเหมือนประเภทของกระทู้สามารถจัดเรียงได้ในลำดับชั้นสองระดับ แท็กรองไม่มีลำดับชั้นหรือลำดับและมีประโยชน์สำหรับการจัดหมวดหมู่ย่อย"
       create_tag_button: => flarum-tags.ref.create_tag
-      primary_heading: Primary Tags
-      secondary_heading: Secondary Tags
-      settings_button: Settings
+      primary_heading: แท็กหลัก
+      secondary_heading: แท็กรอง
+      settings_button: ตั้งค่าแท็ก
 
   # Translations in this namespace are used by the forum user interface.
   forum:
 
     # These translations are used by the Choose Tags modal dialog.
     choose_tags:
-      choose_primary_placeholder: "Choose a primary tag|Choose {count} primary tags"
-      choose_secondary_placeholder: "Choose 1 more tag|Choose {count} more tags"
-      edit_title: "Edit Tags for {title}"
+      choose_primary_placeholder: "เลือกแท็กหลัก|เลือกแท็กหลัก {count} แท็ก"
+      choose_secondary_placeholder: "เลือกอย่างน้อย 1 แท็ก|เลือกอย่างน้อย {count} แท็ก"
+      edit_title: "แก้ไขแท็กสำหรับ {title}"
       submit_button: => core.ref.okay
-      title: Choose Tags for Your Discussion
+      title: เลือกแท็กสำหรับกระทู้ของคุณ
 
     # These translations are used by the composer when starting a discussion.
     composer_discussion:
-      choose_tags_link: Choose Tags
+      choose_tags_link: เลือกแท็ก
 
     # These translations are used by the discussion control buttons.
     discussion_controls:
-      edit_tags_button: Edit Tags
+      edit_tags_button: แก้ไขแท็ก
 
     # These translations are used on the index page, peripheral to the discussion list.
     index:
-      more_link: More...
+      more_link: แสดงแท็กเพิ่มเติม
       tags_link: => flarum-tags.ref.tags
-      untagged_link: Untagged
+      untagged_link: ไม่มีแท็ก
 
     # These translations are displayed between posts in the post stream.
     post_stream:
-      added_tags_text: "{username} added the {tagsAdded}."
-      added_and_removed_tags_text: "{username} added the {tagsAdded} and removed the {tagsRemoved}."
-      removed_tags_text: "{username} removed the {tagsRemoved}."
-      tags_text: "{tags} tag|{tags} tags"
+      added_tags_text: "{username} ติดแท็ก {tagsAdded}"
+      added_and_removed_tags_text: "{username} ติดแท็ก {tagsAdded} และลบแท็ก {tagsRemoved}"
+      removed_tags_text: "{username} ลบแท็ก {tagsRemoved}"
+      tags_text: "{tags}|{tags}"
 
   # Translations in this namespace are used by the forum and admin interfaces.
   lib:
 
     # This translation is displayed in place of the name of a tag that's been deleted.
-    deleted_tag_text: Deleted
+    deleted_tag_text: ถูกลบแล้ว
 
   ##
   # REUSED TRANSLATIONS - These keys should not be used directly in code!
@@ -96,6 +96,6 @@ flarum-tags:
 
   # Translations in this namespace are referenced by two or more unique keys.
   ref:
-    create_tag: Create Tag
-    name: Name
-    tags: Tags
+    create_tag: สร้างแท็ก
+    name: ชื่อแท็ก
+    tags: แท็ก
